--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 html {
   --color-body: #686868;
   --color-main: #0970e5;
-  --color-icons: rgb(175, 177, 181);
+  --color-icons: rgb(141, 141, 141);
   --color-border: rgba(193, 193, 193, 0.705);
   --color-error: rgb(229, 112, 40);
 
@@ -130,28 +130,30 @@ html {
   display: none;
   background: var(--bg-body-light);
   position: fixed;
-  width: 70%;
-  max-width: 330px;
-  padding: 10px;
+  width: 100%;
   height: 100%;
-  min-height: 560px;
   z-index: 200;
   vertical-align: middle;
+  text-align: center;
+  align-items: center;
   
 
 
 }
 
-
+nav{width: 100%;  justify-content: center;
+  text-align: center;}
 
 .headerPrincipal .container {
-  width: 94%;
+  width: 100%;
   height: 100%;
   padding-top: 5px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  text-align: center;
+  align-items: center;
 
 
 }
@@ -173,19 +175,31 @@ html {
   display: flex;
   flex-direction: column;
   padding: 1px;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+
 
 }
 
 .menu a {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
+  margin-bottom: 15px;
   display: flex;
-  padding: 0.5rem;
+  width: 100%;
   color: var(--color-body);
   border-radius: 5px;
+  padding: 10px 0 10px 0;
+
   letter-spacing: 0.5px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  
+
   -webkit-user-select: none;
   text-decoration: none;
-  flex-direction: column;
+ 
 
 
 }
@@ -194,6 +208,10 @@ html {
 .headerPrincipal p {
   color: var(--color-body);
   display: flex;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+ 
 }
 
 
@@ -539,6 +557,15 @@ footer .icon-section i:hover {
 
 @media screen and (min-width: 822px) {
 
+nav{text-align: left;justify-content: left; width: auto;}
+
+  .headerTitle {
+  width: 500px;
+  font-size: 1.1rem;
+  }
+
+
+
   h1 {
     line-height: 6rem;
   }
@@ -548,6 +575,22 @@ footer .icon-section i:hover {
     -webkit-box-shadow: 0px 3px 6px -6px var(--color-2-body);
     -moz-box-shadow: 0px 3px 6px -6px var(--color-2-body);
   }
+
+
+
+  .headerPrincipal .container {
+    width: 100%;
+    height: 100%;
+    padding-top: 5px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  
+  
+  }
+
 
   .headerPrincipal {
     border: 0;
@@ -561,6 +604,7 @@ footer .icon-section i:hover {
     vertical-align: middle;
     justify-content: space-around;
     padding: 7px;
+    
 
 
 
@@ -587,16 +631,19 @@ footer .icon-section i:hover {
   }
 
   .menu {
-    width: 730px;
     text-align: center;
     vertical-align: middle;
+    width: auto;
     justify-content: space-around;
+    margin-right: 50px;
   }
 
 
   .menu a {
+    font-size: 1.1rem;
     border-bottom: 0;
-    margin-top: 0;
+    margin: 13px;
+   
 
   }
 
@@ -607,16 +654,6 @@ footer .icon-section i:hover {
   }
 
 
-  .headerTitle {
-    display: flex;
-    font-size: 1rem;
-    height: 2.15rem;
-    text-align: center;
-    vertical-align: middle;
-    justify-content: center;
-
-  }
-
 
 
 
@@ -624,25 +661,7 @@ footer .icon-section i:hover {
 }
 
 
-@media screen and (max-width:822px) {
-  
-  .headerTitle{
-    padding: 10px;
-  }
 
-  
-  .headerPrincipal .menu {
-    border-radius: 15px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389), 0 3px 6px rgba(0, 0, 0, .05) ;
-    padding: 10px;
-  }
-
-  .menu a{
-    padding: 4px;
-    margin: 12px;
-  }
-
-}
 
 
 @media screen and (max-width: 822px) and (max-height: 562px) {
