--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,13 +1,15 @@
+
 .settingsContainer {
+    text-align: center;
     display: flex;
     flex-direction: column;
-    height: 17vh;
+    height: auto;
     justify-content: space-around;
     background: var(--bg-body-dark);
     border-radius: 15px;
-    padding: 0 20px 0 20px;
+    width: 80%;
+    padding: 9px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
-    margin-bottom: 10px;
 }
 
 
@@ -29,7 +31,7 @@
 
 
 
-.menuButton {
+.menuButton{
     background: var(--color-main);
     width: auto;
     position: fixed;
@@ -41,13 +43,13 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
     padding:  8px 14px 8px 14px;
     color: #ffffff;
-    z-index: 199;
+    z-index: 400;
     transition:1s
    
 }
 
 
-.arrowTopButton {
+.arrowTopButton{
     display: none;
     background: var(--color-main);
     width: auto;
@@ -60,7 +62,7 @@
     color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
     text-shadow: 1px 1px 2px rgb(69, 69, 69);
-    z-index: 199;
+    z-index: 100;
     transition:1s
 }
 
@@ -69,19 +71,27 @@
 
 
 
-.closeMenu {
+.closeMenuButton {
     display: none;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background: #5454546e;
-    width: 100%;
-    height: 100%;
-    z-index: 199;
-    transition:1s
+    background:#e9e9e9;
+    text-align: center;
+    align-items: center;
+    width: 80%;
+    justify-content: center;
+    border-radius: 20px;
+    padding: 10px;
+    color: var(--color-main);
+    font-size: 19px;
+    transition:1s;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 }
 
-
+.closeMenuButton i, .closeMenuButton p{
+    display: inline;
+    color: var(--color-main);
+    text-align: center;
+    justify-content: center;
+}
 
 /*language switch */
 
@@ -218,6 +228,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        padding: 4px;
         background-color: var(--bg-body-dark);
         margin: 0;
         height: 60px;
