--- a/css/base.css
+++ b/css/base.css
@@ -50,13 +50,18 @@ html {
 }
 
 
+.loader{
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background: var(--bg-body-light)
+}
 
-
-.loader {
+.spinner {
   position: absolute;
   left: 50%;
   top: 50%;
-  z-index: 10000;
+
   width: 120px;
   height: 120px;
   margin: -76px 0 0 -76px;
@@ -671,18 +676,21 @@ footer .icon-section i:hover {
 
 @media screen and (max-width: 822px) and (max-height: 562px) {
 
-  .headerPrincipal .container {
-    display: block;
-
-  }
 
   .menu a:not(.active) {
     display: none;
   }
 
-  .settingsContainer {
-    margin-top: 40px;
+
+  .settingsContainer,
+  .closeMenuButton {
+    margin: 10% !important
   }
+
+
+
+
+
 
 
 }
