--- a/css/contact.css
+++ b/css/contact.css
@@ -56,7 +56,8 @@ form {
   padding: 7px;
   border: 1px solid var(--color-border);
   font-size: 0.9rem;
-  background: var(--bg-body-light);
+  background: var(--bg-body-dark);
+  color: var(--color-2-body);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 }
 
