--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,4 +1,3 @@
-
 .settingsContainer {
     text-align: center;
     display: flex;
@@ -9,11 +8,11 @@
     border-radius: 15px;
     width: 80%;
     padding: 9px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389), 0 3px 6px rgba(0, 0, 0, .05);
 }
 
 
-.headerButton{
+.headerButton {
     display: none;
 }
 
@@ -31,7 +30,7 @@
 
 
 
-.menuButton{
+.menuButton {
     background: var(--color-main);
     width: auto;
     position: fixed;
@@ -40,16 +39,15 @@
     border-radius: 20px;
     font-size: 19px;
     text-shadow: 1px 1px 2px rgb(69, 69, 69);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
-    padding:  8px 14px 8px 14px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389), 0 3px 6px rgba(0, 0, 0, .05);
+    padding: 8px 14px 8px 14px;
     color: #ffffff;
     z-index: 400;
-    transition:1s
-   
+    transition: 1s
 }
 
 
-.arrowTopButton{
+.arrowTopButton {
     display: none;
     background: var(--color-main);
     width: auto;
@@ -58,12 +56,12 @@
     bottom: 3%;
     border-radius: 20px;
     font-size: 19px;
-    padding:  8px 14px 8px 14px;
+    padding: 8px 14px 8px 14px;
     color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389), 0 3px 6px rgba(0, 0, 0, .05);
     text-shadow: 1px 1px 2px rgb(69, 69, 69);
     z-index: 100;
-    transition:1s
+    transition: 1s
 }
 
 
@@ -82,10 +80,11 @@
     padding: 10px;
     color: var(--color-main);
     font-size: 19px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389), 0 3px 6px rgba(0, 0, 0, .05);
 }
 
-.closeMenuButton i, .closeMenuButton p{
+.closeMenuButton i,
+.closeMenuButton p {
     display: inline;
     color: var(--color-main);
     text-align: center;
@@ -96,14 +95,14 @@
 
 .lang-list {
     display: flex;
-    width: 78px;
+    width: 100px;
     height: 30px;
     padding: 2px 4px;
     border-radius: 10px;
     font-size: 1rem;
-    color: #585858;
+    color: var(--color-body);
     letter-spacing: 0.5px;
-    border: 1px solid var(--color-border);
+    background: var(--bg-body-light);
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
 }
@@ -232,7 +231,7 @@
         margin: 0;
         height: 60px;
         right: 0;
-        width: 500px;
+        width: 550px;
         top: 52px;
         border-radius: 0;
         border-bottom-left-radius: 30px;
@@ -242,34 +241,36 @@
 
     }
 
-    .header-border{
+
+
+    .header-border {
         box-shadow: 0px 3px 6px -6px var(--color-body);
         -webkit-box-shadow: 0px 3px 6px -6px var(--color-body);
         -moz-box-shadow: 0px 3px 6px -6px var(--color-body);
-      }
+    }
 
-      .headerButton{
+    .headerButton {
         display: inline;
         font-size: 1.2rem;
         color: var(--color-body);
         margin-left: 20px;
-      }
+    }
 
 
-      .headerButton:hover{
+    .headerButton:hover {
         background: var(--linear-bg-1);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-      }
+    }
 
 
 
-    .menuButton{
+    .menuButton {
         display: none;
     }
 
-    .settingsList{
-       display: flex;
+    .settingsList {
+        display: flex;
         flex-direction: row;
         justify-content: space-around;
         margin-top: 5px;
@@ -283,5 +284,3 @@
         margin-right: 15px;
     }
 }
-
-
