--- a/css/projects.css
+++ b/css/projects.css
@@ -177,8 +177,7 @@
   display: flex;
   justify-content: center;
   vertical-align: middle;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin:0 12px 20px 12px ;
   background-color: var(--bg-body-dark);
   padding: 8px;
   border-radius: 5px;
@@ -212,7 +211,7 @@
   display: inline-block !important;
   vertical-align: middle;
   width: 218px;
-  height: 260px;
+  height: 263px;
   margin: 7px;
   position: relative;
   }
