--- a/css/projects.css
+++ b/css/projects.css
@@ -17,13 +17,14 @@
 .projectsContainer h3 {
   font-size: 15px;
   font-weight: 500;
-  line-height: 2rem;
+  line-height: 1.3rem;
+  padding: 8px ;
 
 }
 
 .projectsItem:hover h3{
   font-weight: 600;
-  opacity: 0.85;
+  opacity: 0.95;
 
 }
 
@@ -86,7 +87,10 @@ color: var(--color-main);
 
 .hangmanImg,
 .encryptorImg,
-.portfolioImg, .volcanoesmapImg{
+.portfolioImg, 
+.volcanoesmapImg,
+.greenareasImg,
+.deforestationImg{
   width: 100%;
   max-width: 600px;
   height: 200px;
@@ -117,6 +121,17 @@ color: var(--color-main);
 
 .volcanoesmapImg{
   background-image: url(../img/projects/volcanoesmap.png);
+}
+
+.greenareasImg{
+  background-image: url(../img/projects/greenareas.png);
+
+}
+
+.deforestationImg{
+  background-image: url(../img/projects/deforestation.png);
+
+
 }
 
 .box {
