--- a/css/home.css
+++ b/css/home.css
@@ -202,7 +202,7 @@
     .home__social-section {
         flex-direction: row;
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 5rem;
         max-height: 40px;
         min-height: 30px;
     }
